# PL

./: .gitignore  LICENSE  README.md  environment.yml  example_classifier.ipynb  example_recurrent.ipynb  pyproject.toml  setup.py  training.py  training_sparse.py
PL/dataset/: dataset.py  random_features.py  teacher_student.py
PL/model/: model.py  model_classifier.py
PL/training/: training_RF.py  training_classifier.py
PL/utils/: dynamics.py  functions.py  k_d.py  saving.py
code/: merger.py  training  training.py  training_L3.sh
code/dataset/: dataset.py
code/model/: model.py
code/utils/: functions.py
pl_training.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
savings/: vector_capacity_N_32_P_32_D0_l_1.0_epochs401_lr10.0_spinvector.h5  vector_capacity_N_32_P_32_l_1.0_d_1_epochs_20_lr10.0_spinvector.h5
