[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pl-training"
version = "0.1.1"
description = "Pseudo-likelihood training library"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy", "torch"]
authors = [
  {name="Francesco D'Amico", email="francescoluigidamico@gmail.com"},
  {name="David Machado Perez"},
]

[tool.setuptools.packages.find]
where = ["."]
